Fix text color in dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -370,6 +370,7 @@ section.row {
   --ifm-button-color: #ffffff;
 
   --content--color: #ffffff !important;
+  --content--color--default: #ffffff !important;
   --heading--color: #c9cdde !important;
   --accordion--header-background-color--hover: var(
     --ifm-hover-overlay
